[metadata]
name = consult
version = 0.1
author = Matt VanEseltine
author_email = matvan@umich.edu
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
license = AGPL-3.0-or-later
license_file = LICENSE
description = Consult with a truly excellent engineer.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = humor

[options]
zip_safe = False
include_package_data = True

[flake8]
max-line-length = 88
max-complexity = 10
exclude =
    .git,
    .nox,
    .venv,
    build,
    docs,
    test,
    __pycache__,
    __init__.py

[isort]


[tool:pytest]
log_cli = False
log_cli_level = DEBUG
testpaths = test
python_functions = t_* test_*
